InternexDev_Sandbox/src/objects/WF_PR__c.object
<CustomObject>
    <fields>
        <fullName>Additional_currency_code__c</fullName>
        <label>Additional currency code(PR19)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_entity_identifier_code__c</fullName>
        <label>Additional entity identifier code(PR18)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_paid__c</fullName>
        <label>Amount paid(PR05)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_paid_formula__c</fullName>
        <formula>VALUE(MID(TEXT(Amount_paid__c),0,LEN(TEXT(Amount_paid__c))-2)+&apos;.&apos;+RIGHT(TEXT(Amount_paid__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount_paid_formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_debit_indicator__c</fullName>
        <description>Indicates whether the payment is a credit (C) or debit (D).</description>
        <label>Credit/debit indicator(PR04)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_code__c</fullName>
        <label>Currency code(PR16)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_entity_identifier_code__c</fullName>
        <label>Currency entity identifier code(PR15)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_market_exchange_code__c</fullName>
        <label>Currency market/ exchange code(PR20)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Amount_1__c</fullName>
        <label>Custom Amount 1(PR31)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_settlement_date__c</fullName>
        <label>Deposit/settlement date(PR12)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_rate__c</fullName>
        <label>Exchange rate(PR17)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_amount__c</fullName>
        <label>Gross amount(PR06)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_sequence_number__c</fullName>
        <label>Item sequence number (PR01)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCA_Amount_Paid__c</fullName>
        <label>MCA Amount Paid(PR32)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MCA_Gross_Amount__c</fullName>
        <label>MCA Gross Amount(PR33)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_string_for_Image_mapping__c</fullName>
        <formula>TEXT(YEAR(Deposit_settlement_date__c))+IF(LEN(TEXT(MONTH(Deposit_settlement_date__c)))= 1,&apos;0&apos;+ TEXT(MONTH(Deposit_settlement_date__c)),TEXT(MONTH(Deposit_settlement_date__c)))+TEXT(DAY(Deposit_settlement_date__c)) + WF_BH__r.LB_Number__c + WF_BH__r.BH_Batch_number__c + TEXT(VALUE(TEXT(Reference_1_PR22B__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching string for Image mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODFI_RTN__c</fullName>
        <label>ODFI RTN(PR02)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODFI_account_number_ACH_company_ID_con__c</fullName>
        <inlineHelpText>PR03</inlineHelpText>
        <label>ODFI account number/ ACH company ID/ con</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reversed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>akritiv__Payment__c</referenceTo>
        <relationshipLabel>WF_PR</relationshipLabel>
        <relationshipName>WF_PR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_effective_date__c</fullName>
        <label>Payment effective date(PR13)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <label>Payment method(PR07)</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_method_type_code__c</fullName>
        <label>Payment method type code(PR08)</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_system_reference_number__c</fullName>
        <label>Processing system reference number(PR10)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;PR&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1_PR22B__c</fullName>
        <label>Reference 1(PR22B)</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit Location Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Document Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope Sequence Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Issuer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type of Card or Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_1_description__c</fullName>
        <label>Reference 1 description(PR22A)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1_qualifier_description__c</fullName>
        <label>Reference 1 qualifier/description(PR21)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <label>Reference 2(PR24B)</label>
        <picklist>
            <picklistValues>
                <fullName>Receiver Reference Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Pay Reason Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WASAU Sequence Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX Contract Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPIC Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_2_description__c</fullName>
        <label>Reference 2 description(PR24A)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2_qualifier_description_PR__c</fullName>
        <label>Reference 2 qualifier/description(PR23)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3__c</fullName>
        <label>Reference 3(PR26)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3_qualifier_description__c</fullName>
        <label>Reference 3 qualifier/description(PR25)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_4__c</fullName>
        <label>Reference 4(PR28)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_4_qualifier_description__c</fullName>
        <label>Reference 4 qualifier/description(PR27)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reversal_Reason_Code__c</fullName>
        <label>Reversal Reason Code(PR34)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_payment_reference_number__c</fullName>
        <label>Sender payment reference number(PR09)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_BH__c</fullName>
        <label>Temp BH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_processing_date_time__c</fullName>
        <label>Transaction processing date/time(PR14)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WF_BH__c</fullName>
        <label>WF_BH</label>
        <referenceTo>WF_BH__c</referenceTo>
        <relationshipLabel>WF_PR</relationshipLabel>
        <relationshipName>WF_PR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wells_Fargo_reference_number__c</fullName>
        <label>Wells Fargo reference number(PR11)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>WF_PR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>WF_PR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_PR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>